quick-builder-derive/tests/fail/self_keyword_forbidden_in_closure.stderr
error: self keyword not allowed in validation closure
  --> tests/fail/self_keyword_forbidden_in_closure.rs:10:24
   |
10 |                let f = self;
   |                        ^^^^
